# rust-cross-compile-armv7

./: Cargo.toml  Readme.md
.cargo/: config
hello_console/: Readme.md
hello_console/.cargo/: config
hello_rocket/: Cargo.toml  Readme.md  build-armv7.sh
hello_rocket/.cargo/: config
hello_vulkan/: .gitignore  Cargo.toml  Readme.md  build-armv7.sh
hello_vulkan/src/: lib.rs  main.rs
hello_vulkan/src/run/: default_fragment.glsl  default_vertex.glsl  fbdev.rs  info.rs  mod.rs  shaders.rs  win.rs
